# pyfpdf

./: .all-contributorsrc  .banditrc.yml  .coveragerc  .gitattributes  .gitignore  .hgtags  .pre-commit-config.yaml  .pylintrc  AddLink.md  AddPage.md  Bookmark.py  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Cell.md  Error.md  FPDF.md  FPDF.py  Footer.md  GetStringWidth.md  GetY.md  Gradients.py  Header.md  HelloWorld.txt  Line.md  Link.md  Ln.md  MANIFEST.in  MultiCell.md  Open.md  Output.md  PHPutils.py  PageNo.md  ProjectHome.md  Protection.py  PyPIReadme.rst  README.md  Rect.md  ReferenceManual.md  (+27 more)
.github/: pull_request_template.md
attic/: Gradients.py  TOC.py  makefont.py
contributors/: README.md  build_contributors_html_page.py  contributors.html.jinja2  requirements.txt
doc/: FAQ.htm  acceptpagebreak.htm  addfont.htm  addlink.htm  addpage.htm  aliasnbpages.htm  cell.htm  close.htm  error.htm  footer.htm  fpdf.htm  getstringwidth.htm  getx.htm  gety.htm  header.htm  histo.htm  image.htm  index.htm  line.htm  link.htm  ln.htm  multicell.htm  output.htm  pageno.htm  rect.htm  setauthor.htm  setautopagebreak.htm  setcompression.htm  setcreator.htm  setdisplaymode.htm  setdrawcolor.htm  setfillcolor.htm  setfont.htm  setfontsize.htm  setkeywords.htm  setleftmargin.htm  setlinewidth.htm  setlink.htm  setmargins.htm  setrightmargin.htm  (+9 more)
docs/: AcceptPageBreak.md  AddFont.md  Annotations.md  Barcodes.md  Close.md  CombineWithBorb.md  CombineWithChartingLibs.md  CombineWithLivereload.md  CombineWithMistletoeoToUseMarkdown.md  CombineWithPdfrw.md  CombineWithPyPDF2.md  CombineWithPypdf.md  DashedLine.md  DatabaseStorage.md  Development.md  DocumentOutlineAndTableOfContents.md  Drawing.md  EmojisSymbolsDingbats.md  Encryption.md  ExistingPDFs.md  FAQ.md  FileAttachments.md  GetX.md  HTML.md  History.md  Image.md  Images.md  LineBreaks.md  Links.md  Logging.md  Margins.md  Maths.md  Metadata.md  Open.md  PageBreaks.md  PageFormatAndOrientation.md  Presentations.md  ProjectHome.md  Python3.md  README.md  (+47 more)
ejemplos/: factura-csv-simple.py  factura-harcodeada.py  factura.py  factura.txt  form.py
es/: Tutorial.wiki
examples/: form.py  hardcoded-invoice.py  invoice.csv  simple-csv-invoice.py  simple-csv-invoice.txt
font/: calligra.py  courier.py  helvetica.py  helveticab.py  helveticabi.py  helveticai.py  symbol.py  times.py  timesb.py  timesbi.py  timesi.py  zapfdingbats.py
fonts/: Taviraj-Bold.cw127.pkl  Taviraj-Bold.pkl  Taviraj-Regular.cw127.pkl  Taviraj-Regular.pkl
(+654 files in other folders)
