[metadata]
description-file = README.md

[wheel]
universal = 1

[flake8]
; E203 whitespace before ':'
; E221 multiple spaces before operator
; E241 multiple spaces after ','
; E251 no spaces around equals
; E701 multiple statements on one line (colon)
; E731 assignment of lambdas
; W503 line break before binary operator
ignore = E203, E221, E241, E251, E701, E731, W503

[tool:pytest]
python_files = test/*.py
