[metadata]
name = fpdf2
url = https://pyfpdf.github.io/fpdf2/
description = Simple & fast PDF generation for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Olivier PLATHEY ported by Max
maintainer = Lucas Cimon
license = LGPLv3+
project_urls =
  Documentation = https://pyfpdf.github.io/fpdf2/
  Code = https://github.com/PyFPDF/fpdf2
  Issue tracker = https://github.com/PyFPDF/fpdf2/issues
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Operating System :: OS Independent
  Topic :: Printing
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Text Processing :: Markup
  Topic :: Multimedia :: Graphics
  Topic :: Multimedia :: Graphics :: Presentation
keywords =
  pdf
  unicode
  png
  jpg
  ttf
  barcode

[options]
packages =
  fpdf
install_requires =
  defusedxml
  Pillow>=6.2.2,!=9.2.*  # minimum version tested there: https://github.com/PyFPDF/fpdf2/actions/runs/2295868575
  # Version 9.2.0 is excluded due to DoS vulnerability with TIFF images: https://github.com/PyFPDF/fpdf2/issues/628
  # Version exclusion explained here: https://devpress.csdn.net/python/630462c0c67703293080c302.html
  fonttools>=4.34.0
python_requires = >=3.7

[bdist_wheel]
universal = 1

[flake8]
; E203 whitespace before ':'
; E221 multiple spaces before operator
; E241 multiple spaces after ','
; E251 no spaces around equals
; E701 multiple statements on one line (colon)
; E731 assignment of lambdas
; W503 line break before binary operator
ignore = E203, E221, E241, E251, E701, E731, W503

[tool:pytest]
addopts = --cov=fpdf --cov-report=xml
log_cli = 1
log_cli_level= WARN
